feat(empaque): implementación completa del módulo de empaque con validaciones de negocio, control de integridad y manejo de estados
- Se implementa flujo completo de creación de empaques
- Se integra relación con DetalleProduccion y ProductoTerminado
- Se valida que no se empaquen más unidades de las producidas
- Se agrega control de unicidad (detalle + producto + lote)
- Se implementa manejo de estados de empaque (EN_PROCESO, COMPLETADO)
- Se ajusta EmpaqueMapper para conversión correcta entre capas
- Se mejora EmpaqueService con reglas de negocio y acumulados
- Se actualiza EmpaqueResponse con nuevos campos
- Se centraliza manejo de errores en GlobalExceptionHandler (400, 404, 409)
- Se implementa persistencia en EmpaqueJpaAdapter
- Se ajusta EmpaqueEntity y repositorio JPA
- Se crean endpoints REST en EmpaqueController
- Se añade enum EstadoEmpaque en dominio

Pruebas realizadas:
- Creación de empaques válida
- Validación de sobre-empaque (400 Bad Request)
- Validación de duplicidad de lote (409 Conflict)
- Pruebas por roles (seguridad OK)
- Consulta por diferentes filtros

Resultado:
Módulo de empaque funcional, consistente y alineado a reglas del negocio